2004-02-22  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/msgid.c: not write mail to msgid
	    history
	* src/all: rename OLD_TMP to OLD_TOSS, fix warnings

2004-02-19  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* all: fix Makefiles

2004-02-17  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/ftn2rfc.c: fix area-flag
	* src/common/msgid.c: fix DBC_HISTORY

2004-02-12  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/node.c: fix the problem with dupes of
	    the addresses in (F)Areas.bbs

2004-02-11  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/tick/ftntick.c: fix the AutoCreateFileechoLine
	    problem
	* src/areafix/areafix.c: fix the problem of similar
	    path to autocreate fechos in FAreas.bbs

2004-02-09  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update
	* doc/README.ru: update

2004-02-05  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: fix support gcc<3.0
	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
	    (thanks to Andrew Porohin)

2004-02-02  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* acconfig.h: change rfc_lvl_1
	* src/toss/runinc.c: add ftpin, uuin support
	    (thanks to Andrew Zhuravlev)

2004-01-31  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update freebsd port
	* src/common/msgid.c: change log() to fglog()

2004-01-30  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/old/FIDOGATE_ftrack: add ftrack FAQ(thanks
	    to Andrew Zhuravlev)
	* configure.in: add --with-lockdir(thanks to
	    Andrew Zhuravlev)

2004-01-29  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/rfcheader.c: fix rfc_lvl_3

2004-01-28  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/old/FAQ_Fidogate: add old fidogate FAQ

2004-01-27  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/tick/ftntick.c: fix logging TickFileAction
	* src: change log() to fglog()