@@ -11,14 +11,14 @@
 #
 # FIDO:	  2:5030/1229
 #
-# $Id: report_traffic.in,v 1.1 2003/11/05 00:57:10 rusfidogate Exp $
+# $Id: report_traffic.in,v 1.2 2004/02/25 18:16:43 rusfidogate Exp $
 #
 
 require 5.000;
 
 use strict;
 
-my $VERSION = '$Revision: 1.1 $ ';
+my $VERSION = '$Revision: 1.2 $ ';
 my $PROGRAM = "report_traffic";
 
 use POSIX qw(strftime);
@@ -36,7 +36,7 @@ CONFIG_read($CONFIG);
 
 # Configurable part ##########################################################
 
-my $msgfrom = "\"Stat daemon\" <news\@<HOSTNAME><DOMANNAME>>";
+my $msgfrom = "\"Stat daemon\" <news\@<HOSTNAME><DOMAINNAME>>";
 my $msgnewsgroup = "junk";
 my $msgnode = "2:5030/1229.0";
 
