@@ -1,3 +1,10 @@
+2004-02-25  Andrey Slusar <rusfidogate@users.sourceforge.net>
+
+	* src/common/packet.c: fix the processing of the bad
+	    packets
+	* src/areafix/ftnafutil.c: fix the problem with removing
+	    of nodes during unsubscribe
+
 2004-02-22  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
 	* src/common/msgid.c: not write mail to msgid
